--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^4.2.1",
     "prisma": "^5.22.0",
     "qrcode": "^1.5.4",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.0.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.25",
