--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/qrcode": "^1.5.6",
     "@vee-validate/zod": "^4.15.1",
+    "canvas-confetti": "^1.9.4",
     "daisyui": "^5.5.5",
     "nuxt": "^4.2.1",
     "prisma": "^5.22.0",
