--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   }
 }
