--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/qrcode": "^1.5.6",
     "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^14.1.0",
     "canvas-confetti": "^1.9.4",
     "daisyui": "^5.5.5",
     "nuxt": "^4.2.1",
